--- a/app/src/main/res/layout/fragment_gestion.xml
+++ b/app/src/main/res/layout/fragment_gestion.xml
@@ -1,14 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GestionFragment">
-
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="gestion" />
+        android:id="@+id/familycode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="XXX-XXX"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="105dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/codemessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/familycode"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:text="Guarda este codigo. Para invitar personas a tu familia" />
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/unirteFamilia"
+        android:backgroundTint="@color/purple_700"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:text="Unirte"
+        android:layout_below="@id/codemessage"
+        android:layout_margin="20dp"/>
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:id="@+id/cerrarSesion"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/purple_700"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:text="Cerrar sesion"
+        android:layout_below="@id/unirteFamilia"
+        android:layout_margin="20dp" />
+
+
+</RelativeLayout>
